<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/mensaje_parametros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/SPO2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtspo2"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextSPO2"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Pulso_Alto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtpulsoalto"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editTextPulsoAlto"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Pulso_Bajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtpulsobajo"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:layout_weight="1"
            android:id="@+id/editTextPulsoBajo" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/Cancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnCancelarParametros"
            android:layout_weight="1" />

        <Button
            android:text="@string/Guardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAceptarParametros"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>